# BILT_Workflow_JA

./: NOTICE  RASPBERRY_PI_SETUP.md  README.md  app.py  bilt_client.py  bilt_managers.py  bilt_service.py  config.py  launcher.py  launcher_rpi.py  pyproject.toml  requirements.txt
bilt/docs/: architecture.md
templates/: alert_viewer.html  annotation_page.html  base.html  detection_page.html  help.html  index.html  projects.html  workflow.html
third_party_licenses/: Flask-SocketIO_LICENSE.txt  Flask_LICENSE.txt  PyYAML_LICENSE.txt  eventlet_LICENSE.txt  opencv-python_LICENSE.txt  python-engineio_LICENSE.txt  python-socketio_LICENSE.txt  pywebview_LICENSE.txt  requests_LICENSE.txt
